# PKM-Clip

./: .aiexclude  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  config.yaml.example  pyproject.toml
openspec/: AGENTS.md  project.md
openspec/changes/update-image-save-location/: design.md  proposal.md  tasks.md
openspec/specs/dry-run-cli-option/: spec.md
openspec/specs/image-download-obsidian-reference/: spec.md
openspec/specs/markdown-file-save/: spec.md
openspec/specs/project-structure/: spec.md
pkm_clip/: cli_wrapper.py
pm_doc/: 01_Product_Overview.md  02_Feature_Specifications.md  03_Technical_Requirements.md  04_Product_Roadmap.md
src/: main.py
src/application/: image_download_service.py  models.py  save_markdown_file_service.py  url_to_markdown_service.py
src/domain/: entities.py  exceptions.py  filename_generator.py  frontmatter_generator.py  image_processor.py  markdown_file_combiner.py
src/infrastructure/: config.py  file_system.py  image_downloader.py  jina_reader_client.py  logger.py  markdown_file_writer.py  metadata_parser.py  retry.py  url_validator.py
tests/integration/: test_frontmatter_generation_e2e.py  test_image_download_e2e.py  test_image_error_handling.py  test_jina_reader_client.py  test_markdown_file_save_integration.py  test_url_to_markdown_with_frontmatter.py
tests/unit/: test_clipping.py  test_filename_generator.py  test_frontmatter_generator.py  test_frontmatter_options.py  test_markdown_file_combiner.py  test_markdown_file_writer.py  test_metadata_parser.py  test_save_markdown_file_service.py
(+39 files in other folders)
